--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,79 @@
 <% layout("/layouts/boilerplate")%>
 <body>
-    <h3>All Listings</h3>
+    <!-- <h3>All Listings</h3> -->
     <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <style>
+        #filters{
+            display:flex;
+            flex-wrap: wrap;
+        }
+
+        .filter{
+            text-align:center;
+            margin-top: 2rem;
+            margin-right: 2rem;
+            opacity: 0.7;
+        }
+
+        .filter p{
+            font-size: 0.8rem;
+        }
+
+        .filter:hover{
+            opacity: 1;
+        }
+    </style>
+
+    <div id="filters">
+        <div class="filter">
+            <div><i class="fa-solid fa-fire"></i></div>
+            <p>Trending</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+            <p>Rooms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain-city"></i></div>
+            <p>Iconic cities</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain-sun"></i></div>
+            <p>Mountains</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-brands fa-fort-awesome"></i></div>
+            <p>Castles</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+            <p>Amazing Pools</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-campground"></i></div>
+            <p>Camping</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-cow"></i></div>
+            <p>Farms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-snowflake"></i></div>
+            <p>Arctic</p>
+        </div>
+
+        <div class="tax-toggle">
+            <div class="form-check-reversed form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Display Taxes</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <%for(listing of allListings){%>
         <a href="/listings/<%= listing._id %>" class="listing-link">
             <div class="card col listing-card">
@@ -21,4 +89,11 @@
         </a>
         <%}%>
     </div>
+
+    <script>
+        let taxSwitch = document.querySelector("#flexSwitchCheckDefault")
+        taxSwitch.addEventListener("click", ()=>{
+            console.log("clicked");
+        })
+    </script>
 </body>
