--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,5 @@
 <%layout("layouts/boilerplate")%>
-  <script>const mapToken = "<%= process.env.MAP_TOKEN %>";</script>
+
   <body>
     <div class="row mt-3">
       <div class="col-8 offset-3">
@@ -10,11 +10,19 @@
       <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
-          <p class="card-text"><%=listing.owner.username%><br></p>
+          <p class="card-text">
+            <%=listing.owner.username%><br>
+          </p>
           <p class="card-text">&#8377;<%=listing.price.toLocaleString("en-IN")%><br></p>
-          <p class="card-text"><%=listing.description%><br><br></p>
-          <p class="card-text"><%=listing.location%><br></p>
-          <p class="card-text"><%=listing.country%><br></p>
+          <p class="card-text">
+            <%=listing.description%><br><br>
+          </p>
+          <p class="card-text">
+            <%=listing.location%><br>
+          </p>
+          <p class="card-text">
+            <%=listing.country%><br>
+          </p>
         </div>
       </div>
 
@@ -26,68 +34,85 @@
             <button class="btn btn-dark offset-5">Delete</button>
           </form>
         </div>
-      <%}%>
+        <%}%>
     </div>
     <br><br>
 
     <div class="col-8 offset-3 mb-3">
       <hr>
       <%if(currUser){%>
-      <h4>Leave a Review</h4>
-      <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
-        <!-- <div class="mb-3 mt-3">
+        <h4>Leave a Review</h4>
+        <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
+          <!-- <div class="mb-3 mt-3">
           <label for="rating" class="form-label">Rating</label>
           <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
         </div> -->
-        <div class="mb-3 mt-3">
-          <label for="rating" class="form-label">Rating</label>
-          <fieldset class="starability-slot">
-            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
-            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-            <label for="first-rate1" title="Terrible">1 star</label>
-            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-            <label for="first-rate2" title="Not good">2 stars</label>
-            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-            <label for="first-rate3" title="Average">3 stars</label>
-            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-            <label for="first-rate4" title="Very good">4 stars</label>
-            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-            <label for="first-rate5" title="Amazing">5 stars</label>
-          </fieldset>
-        </div>
-        <div class="mb-3 mt-3">
-          <label for="comment" class="form-label">Comment</label>
-          <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-          <div class="invalid-feedback">Please write a review</div>
-        </div>
-        <button class="btn btn-outline-dark">Submit</button>
-      </form>
-      <hr>
-      <%}%>
+          <div class="mb-3 mt-3">
+            <label for="rating" class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked
+                aria-label="No rating." />
+              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+          </div>
+          <div class="mb-3 mt-3">
+            <label for="comment" class="form-label">Comment</label>
+            <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please write a review</div>
+          </div>
+          <button class="btn btn-outline-dark">Submit</button>
+        </form>
+        <hr>
+        <%}%>
 
-      <% if(listing.reviews.length){%>
-        <p><b>All Reviews</b></p>
+          <% if(listing.reviews.length){%>
+            <p><b>All Reviews</b></p>
 
-        <div class="row">
-          <% for(review of listing.reviews){%>
-            <div class="card col-5 ms-3 mb-3">
-              <div class="card-body mt-3">
-                <h5 class="card-title"><%= review.author.username %></h5> <!-- left here -->
-                <p class="starability-result" data-rating="<%= review.rating %>"></p>
-                <p class="card-text"><%= review.comment %></p>
-                <form method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" class="mb-3">
-                  <button class="btn btn-dark">Delete</button>
-                </form>
-              </div>
+            <div class="row">
+              <% for(review of listing.reviews){%>
+                <div class="card col-5 ms-3 mb-3">
+                  <div class="card-body mt-3">
+                    <h5 class="card-title">
+                      <%= review.author.username %>
+                    </h5> <!-- left here -->
+                    <p class="starability-result" data-rating="<%= review.rating %>"></p>
+                    <p class="card-text">
+                      <%= review.comment %>
+                    </p>
+                    <form method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE"
+                      class="mb-3">
+                      <button class="btn btn-dark">Delete</button>
+                    </form>
+                  </div>
+                </div>
+                <%}%>
             </div>
             <%}%>
-        </div>
-      <%}%>
 
     </div>
+    <!--
     <div class="mb-3 col-8 offset-3">
       <h3>Where you'll be</h3>
       <div id="map"></div>
     </div>
-    <script src="/js/map.js"></script>
+    <script>
+      // TO MAKE THE MAP APPEAR YOU MUST
+      // ADD YOUR ACCESS TOKEN FROM
+      // https://account.mapbox.com
+      mapboxgl.accessToken = '<%= process.env.MAP_TOKEN %>';
+      const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        center: [-74.5, 40], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 9 // starting zoom
+      });
+    </script> -->
   </body>
